feat: project contribution ledge (sổ cái đóng góp vào project) , shared allocation (báo cáo đóng góp/lợi ích trên 1 phân bổ chung), financial allocation
